--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-  <!-- <script type="text/javascript" src="main.js"></script> -->
-  <!-- <script src="https://d3js.org/d3-dsv.v1.min.js"></script> -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <script type="text/javascript" src="https://d3js.org/d3.v5.js" ></script>
 </head>
 <body>
+  <!-- <script type="text/javascript" src="main.js"></script> -->
+  <p> "Webpage is here!"</p>
   <script>
+
     var file = "World_Cup_Stats_2018.csv";
-    // d3.csv("simple.csv", function(vals){
-    d3.csv("simple.csv", function(d) {
-      return {
-        year: new Date(+d.Year, 0, 1), // convert "Year" column to Date
-        make: d.Make,
-        model: d.Model,
-        length: +d.Length // convert "Length" column to number
-      };
-    }, function(error, rows) {
-      console.log(rows);
-    });
+    // var myVar = function(file) {
+        d3.csv("simple.csv", function(d) {
+        return {
+          year: new Date(+d.Year, 0, 1),
+          make: d.Make,
+          model: d.Model,
+          length: +d.Length
+        };
+      });
+    // };
+    // console.log(myVar);
   </script>
 </body>
 </html>
