--- a/index.html
+++ b/index.html
@@ -5,26 +5,59 @@
   <script type="text/javascript" src="https://d3js.org/d3.v5.js" ></script>
 </head>
 <body>
+  <div class="transbox">
+  </div>
   <script>
-  
-  var dataset = [1, 2, 3, 4, 5];
-    d3.select("body")
-      .selectAll("p")
-      .data(dataset)
-      .enter()
-      .append("p")
-      .text(function(d){
-        return d;
-      });
-    var file = "World_Cup_Stats_2018.csv";
-    d3.csv("simple.csv", function(data) {
+
+  // var dataset = [1, 2, 3, 4, 5];
+  //   d3.select("div")
+  //     .selectAll("p")
+  //     .data(dataset)
+  //     .enter()
+  //     .append("p")
+  //     .text(function(d){
+  //       return d;
+  //     });
+    var wc_file = "data/World_Cup_Stats_2018.csv";
+    var sim_file = "data/simple.csv";
+
+    var loaded_data = [];
+    d3.csv(sim_file, function(csv) {
+      csv.map(function(d){
+        loaded_data.push(d.Year);
+      })
+      // data.forEach(function(d){
+      //   d.year = new Date(+d.Year, 0, 1);
+      //   d.make = d.Make;
+      //   d.model = d.Model;
+      //   d.length = +d.Length;
+      // });
+      printData(loaded_data);
       // return {
       //   year: new Date(+d.Year, 0, 1),
       //   make: d.Make,
       //   model: d.Model,
       //   length: +d.Length
       // };
-      d3.select("body")
+    // }, function (data) {
+    //   // d3.select("div")
+    //   //   .html("<p>"+data.Make+"</p>")
+    //
+    //   d3.select("div")
+    //     .selectAll("p")
+    //     .data([1,0])
+    //     .enter()
+    //     .append("p")
+    //     .text("New Paragraph!");
+    //     // .text(function(d) {
+    //     //     return d.Make;
+    //     // });
+    //   console.log(data);
+    //   console.log(1);
+    });
+
+    function printData(data){
+      d3.select("div")
         .selectAll("p")
         .data(data)
         .enter()
@@ -33,8 +66,7 @@
         // .text(function(d) {
         //     return d.Make;
         // });
-      console.log(data.Make);
-    });
+    };
   </script>
 </body>
 </html>
