asking for help

--- a/index.html
+++ b/index.html
@@ -21,52 +21,25 @@
     var wc_file = "data/World_Cup_Stats_2018.csv";
     var sim_file = "data/simple.csv";
 
-    var loaded_data = [];
-    d3.csv(sim_file, function(data) {
-      csv.map(function(d){
-        loaded_data.push(d.Year);
-      })
-      return loaded_data;
-      // data.forEach(function(d){
-      //   d.year = new Date(+d.Year, 0, 1);
-      //   d.make = d.Make;
-      //   d.model = d.Model;
-      //   d.length = +d.Length;
-      // });
-
-      // return {
-      //   year: new Date(+d.Year, 0, 1),
-      //   make: d.Make,
-      //   model: d.Model,
-      //   length: +d.Length
-      // };
-    }, function (dataset) {
-      // d3.select("div")
-      //   .html("<p>"+data.Make+"</p>")
-
+    d3.csv(sim_file, function(d) {
+      return {
+        year: new Date(+d.Year, 0, 1), // convert "Year" column to Date
+        make: d.Make,
+        model: d.Model,
+        length: +d.Length // convert "Length" column to number
+      };
+    }, function(data) {
+      console.log(data);
       d3.select("div")
         .selectAll("p")
-        .data(dataset)
+        .data(data)
         .enter()
         .append("p")
         .text("New Paragraph!");
         // .text(function(d) {
         //     return d.Make;
         // });
-      console.log(dataset);
-      console.log(1);
     });
-
-    // function printData(data){
-    //   d3.select("div")
-    //     .selectAll("p")
-    //     .data(data)
-    //     .enter()
-    //     .append("p")
-    //     .text("New Paragraph!");
-    //     // .text(function(d) {
-    //     //     return d.Make;
-    //     // });
   </script>
 </body>
 </html>
