--- a/index.html
+++ b/index.html
@@ -6,36 +6,9 @@
 </head>
 
 <body>
-  <script>
-
-  var dataset = [ 15, 1, 5, 20, 30];
-
-  var svgCon = d3.select("body")
-                .append("svg");
-
-  d3.select("body")
-      .append("svg")
-      .selectAll("line")
-      .data(dataset)
-      .enter()
-      .append("line")
-      // .attr("class", "bar")
-      .attr("x1", 0)
-      .attr("x2", function(d) {
-        var barHeight = d * 5;  //Scale up by factor of 5
-        return barHeight;
-      })
-      .attr("y1", function(d){
-        console.log(d);
-        return 10;
-      })
-      .attr("y2", 0)
-      ;
-  </script>
-
-  <!-- <div class="transbox">
+  <div class="transbox">
   </div>
-  <script>
+  <!-- <script>
 
     var wc_file = "data/World_Cup_Stats_2018.csv";
 
@@ -80,5 +53,55 @@
         .text("\n");
     });
   </script> -->
+
+  <!-- <script>
+
+  var dataset = [ 15, 1, 5, 20, 30];
+
+  d3.select("body")
+      .append("svg")
+      .selectAll("line")
+      .data(dataset)
+      .enter()
+      .append("line")
+      // .attr("class", "bar")
+      .attr("x1", 0)
+      .attr("x2", function(d) {
+        var barHeight = d * 5;  //Scale up by factor of 5
+        return barHeight;
+      })
+      .attr("y1", function(d, i){
+        return 10 * i;
+      })
+      .attr("y2", function(d, i){
+        return 10 * i;
+      })
+      ;
+  </script> -->
+  <script>
+
+    var wc_file = "data/World_Cup_Stats_2018.csv";
+
+    d3.csv(wc_file, function(d) {
+      //Get all the goal times
+      var goalTimes = [];
+      for(item in d){
+        if(item.startsWith("Goal") && d[item] != "" ){
+           goalTimes.push(d[item]);
+         }
+      }
+      //Return all the variables
+      return {
+        round: d.Round,
+        game: d.Game,
+        score: d.Score,
+        winner: d.Winner,
+        goal_times: goalTimes
+      };
+  }, function(data) {
+
+
+  });
+  </script>
 </body>
 </html>
