--- a/test.html
+++ b/test.html
@@ -59,24 +59,36 @@
       d3.select("body").append("svg")
        .selectAll("circle")
        .attr("class", "main_svg")
-       .data(data)
+       .data(data.goal_times)
        .enter()
        .append("circle")
        .attr("cx", function(d){
-         console.log(d.goal_times);
-         d.goal_times.forEach(function(el){
-           if(el.includes("(")){
-             el = el.split("(")[0];
+         if(d.includes("(")){
+             d = d.split("(")[0];
            }
-           if(el.includes(":")){
-             el = el.split(":")[0];
+           if(d.includes(":")){
+             d = d.split(":")[0];
            }
-           var int_el = parseInt(el);
+           var int_d = parseInt(d);
 
-           var to_return = (int_el / 90) * 1000;
+           var to_return = (int_d / 90) * 1000;
            console.log(to_return);
-           return 70;
-         })
+           return to_return;
+
+         // console.log(d.goal_times);
+         // d.goal_times.forEach(function(el){
+         //   if(el.includes("(")){
+         //     el = el.split("(")[0];
+         //   }
+         //   if(el.includes(":")){
+         //     el = el.split(":")[0];
+         //   }
+         //   var int_el = parseInt(el);
+         //
+         //   var to_return = (int_el / 90) * 1000;
+         //   console.log(to_return);
+         //   return 70;
+         // })
 
        })
        .attr("cy", function(d, i){
