--- a/test.html
+++ b/test.html
@@ -59,23 +59,30 @@
       d3.select("body").append("svg")
        .selectAll("circle")
        .attr("class", "main_svg")
-       .data(data.goal_times)
+       .data(data)
        .enter()
        .append("circle")
        .attr("cx", function(d){
-         if(d.includes("(")){
-             d = d.split("(")[0];
-           }
-           if(d.includes(":")){
-             d = d.split(":")[0];
-           }
-           var int_d = parseInt(d);
 
-           var to_return = (int_d / 90) * 1000;
-           console.log(to_return);
-           return to_return;
 
-         // console.log(d.goal_times);
+
+         console.log(d);
+         // if d.goal_times.length == 0:
+         //  return;
+         var el = d.goal_times[0];
+         if(el.includes("(")){
+           el = el.split("(")[0];
+         }
+         if(el.includes(":")){
+           el = el.split(":")[0];
+         }
+         var int_el = parseInt(el);
+
+         var to_return = (int_el / 90) * 1000;
+         console.log(to_return);
+         return to_return;
+
+
          // d.goal_times.forEach(function(el){
          //   if(el.includes("(")){
          //     el = el.split("(")[0];
@@ -87,7 +94,7 @@
          //
          //   var to_return = (int_el / 90) * 1000;
          //   console.log(to_return);
-         //   return 70;
+         //   return to_return;
          // })
 
        })
