--- a/test.html
+++ b/test.html
@@ -56,6 +56,7 @@
       //   .text("\n")
       //   ;
 
+      var line_length = 1000;
       d3.select("body").append("svg")
        .selectAll("circle")
        .attr("class", "main_svg")
@@ -64,38 +65,24 @@
        .append("circle")
        .attr("cx", function(d){
 
-
-
-         console.log(d);
-         // if d.goal_times.length == 0:
-         //  return;
-         var el = d.goal_times[0];
-         if(el.includes("(")){
-           el = el.split("(")[0];
+         console.log(d.goal_times);
+         if(d.goal_times.length ==0){
+           return;
          }
-         if(el.includes(":")){
-           el = el.split(":")[0];
-         }
-         var int_el = parseInt(el);
 
-         var to_return = (int_el / 90) * 1000;
-         console.log(to_return);
-         return to_return;
+         d.goal_times.forEach(function(el){
+           if(el.includes("(")){
+             el = el.split("(")[0];
+           }
+           if(el.includes(":")){
+             el = el.split(":")[0];
+           }
+           var int_el = parseInt(el);
 
-
-         // d.goal_times.forEach(function(el){
-         //   if(el.includes("(")){
-         //     el = el.split("(")[0];
-         //   }
-         //   if(el.includes(":")){
-         //     el = el.split(":")[0];
-         //   }
-         //   var int_el = parseInt(el);
-         //
-         //   var to_return = (int_el / 90) * 1000;
-         //   console.log(to_return);
-         //   return to_return;
-         // })
+           var to_return = (int_el / 90) * line_length;
+           console.log(int_el);
+           return to_return;
+         })
 
        })
        .attr("cy", function(d, i){
@@ -112,7 +99,7 @@
         .enter()
         .append("line")
         .attr("x1", 0)
-        .attr("x2", 100)
+        .attr("x2", line_length)
         .attr("y1", function(d, i){
           return 30 * i;
         })
