--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     var wc_file = "data/World_Cup_Stats_2018.csv";
 
+    //Read Data from csv
     d3.csv(wc_file, function(d) {
-      //Get all the goal times
-      // var line_length = 100;
-      var goalTimes = [];
 
+      //Get all the goal times
+      var goalTimes = [];
       for(item in d){
         if(item.startsWith("Goal") && d[item] != "" ){
-          goalTimes.push(d[item]);
-        }
+           goalTimes.push(d[item]);
+         }
       }
 
       //Return all the variables
@@ -33,40 +33,51 @@
         winner: d.Winner,
         goal_times: goalTimes
       };
-
     }, function(data) {
-      let global_goal_times = data.map(function(d) { return d.goal_times })
 
-
-      let sum_goal_times = []
-
-      for (let goal_times in global_goal_times) {
-        let arr = global_goal_times[goal_times]
-
-        sum_goal_times = sum_goal_times.concat(arr)
-
-      }
-
+      /* Circles for each goal*/
+      var line_length = 1000;
+      var default_color = "red";
+      var default_radius = 5;
       d3.select("body").append("svg")
-        .selectAll("circle")
-        .attr("class", "main_svg")
-        .data(sum_goal_times)
-        .enter()
-        .append("circle")
-        .attr("cx", function(d){
+       .selectAll("g")
+       .attr("class", "main_svg")
+       .data(data)
+       .enter()
+       .append("g")
+       .selectAll("circle")
+       .data(d => d.goal_times)
+       .enter()
+       .append("circle")
+       .attr("cx", function(el){
 
-          var goal_time = d.match(/(\d+)/g)[0]
-          goal_time = parseInt(goal_time)
+           if(el.includes("(")){
+             el = el.split("(")[0];
+           }
+           if(el.includes(":")){
+             el = el.split(":")[0];
+           }
+           var int_el = parseInt(el);
 
-          var to_return = (goal_time/90);
+           var to_return = (int_el / 90) * line_length;
+           console.log(int_el);
+           return to_return;
 
-          return to_return;
-        })
-        .attr("cy", function(d, i){
+       })
+       .attr("cy", function(d, i){
           return 30 * i;
-        })
-        .attr("r", 5)
+       })
+       .attr("r", default_radius)
+       .style("fill", default_color)
+       .on("mouseover", function(){
+         d3.select(this).attr("r", 20).style("fill", "black");
+       })
+       .on("mouseout", function(){
+          d3.select(this).attr("r", default_radius).style("fill", default_color);
+       })
+       ;
 
+      /* Line for each game */
       d3.select("body")
         .select("svg")
         .selectAll("line")
@@ -75,16 +86,15 @@
         .enter()
         .append("line")
         .attr("x1", 0)
-        .attr("x2", 100)
+        .attr("x2", line_length)
         .attr("y1", function(d, i){
           return 30 * i;
         })
         .attr("y2", function(d, i){
-          return 30 * i
+          return 30 * i;
         })
-    })
-
-
+        ;
+    });
   </script>
 
 </body>
