--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <script>
 
-    var wc_file = "data/World_Cup_Stats_2018.csv";
+    var wc_file = "data/World_Cup_Stats_2010.csv";
 
     //Read Data from csv
     d3.csv(wc_file, function(d) {
@@ -30,9 +30,10 @@
            goalTimes.push(d[item]);
          }
       }
-
       //Return all the variables
       return {
+        //Round,,Game,Winner,Score,Total Stoppage Time,Goal_1,Goal_2,Goal_3,Goal_4,Goal_5,Goal_6,Goal_7,Goal_8,Goal_9,Goal_10
+
         round: d.Round,
         game: d.Game,
         score: d.Score,
@@ -42,7 +43,8 @@
     }, function(data) {
 
       /* Circles for each goal*/
-      var line_length = (window.innerWidth) * 0.6;
+      var start_length = 200;
+      var line_length = (window.innerWidth) * 0.7;
       var default_color = "red";
       var default_radius = 5;
       d3.select("body").append("svg")
@@ -56,35 +58,29 @@
         .enter()
         .append("circle")
         .attr("cx", function(d){
+          console.log(d);
 
-          console.log("start");
-          console.log(line_length);
-          console.log(window.outerWidth);
-          console.log(window.innerWidth);
-          console.log("end");
-          var el = d;
-          if(el.includes("(")){
-            el = el.split("(")[0];
-          }
-          if(el.includes(":")){
-            el = el.split(":")[0];
-          }
-          var int_el = parseInt(el);
-
-          var to_return =(int_el / 90) * line_length;
-
-          if(isNaN(to_return)){
+          if( d == null){
             return;
-          }else{
-            return to_return;
           }
+
+          var time_of_goal_raw = d;
+          if(time_of_goal_raw.includes("(")){
+            var time_of_goal = parseInt(time_of_goal_raw.split("(")[0]);
+          }
+
+          var to_return =(time_of_goal / 90) * (line_length-start_length);
+
+          return to_return+start_length;
 
        })
        .attr("cy", function(d, a, i){
          return 30 * i;
        })
        .attr("r", default_radius)
-       .style("fill", default_color)
+       .style("fill", function(d){
+         return default_color;
+       })
        .on("mouseover", function(){
          d3.select(this).attr("r", 20).style("fill", "black");
        })
@@ -92,6 +88,7 @@
           d3.select(this).attr("r", default_radius).style("fill", default_color);
        })
        ;
+
 
       /* Line for each game */
       d3.select("body")
@@ -101,7 +98,7 @@
         .data(data)
         .enter()
         .append("line")
-        .attr("x1", 10)
+        .attr("x1", start_length)
         .attr("x2", line_length)
         .attr("y1", function(d, i){
           return 30 * i;
@@ -111,10 +108,10 @@
         })
         ;
 
-      /* Label for the lines */
+      /* Game Label for the lines */
       d3.select("body")
         .select("svg")
-        // .selectAll("text")
+        .selectAll("text")
         .data(data)
         .enter()
         .append("text")
@@ -122,11 +119,23 @@
         .attr("y", function(d, i){
           return 30 * i;
         })
-        .attr("text-anchor", "middle")
-        .text(function(d){
-          return data.game;
+        .attr("text-anchor", "left")
+        .text(
+          function(d){
+          return d.game;
         })
+        // .append("text")
+        // .attr("x", line_length - 10)
+        // .attr("y", function(d, i){
+        //   return 30 * i;
+        // })
+        // .attr("text-anchor", "left")
+        // .text(
+        //   function(d){
+        //   return d.score;
+        // })
         ;
+
 
     });
   </script>
