im getting stuck. need someone to teach me next level

--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+
+<!--
+TODO:
+
+To Add:
+ - make sure cirlcles are all on lines
+ - changes when scrolling
+ - toggle at top for different years
+ - add key line for explaining
+
+
+Problems:
+ - Top line in group
+ - Scores on left
+ - display goal time at hover
+ - Extra Line in different color for overtime
+
+Done:
+ - color code circles based on winner or loser
+
+-->
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -42,11 +67,32 @@
       };
     }, function(data) {
 
+
       /* Circles for each goal*/
       var start_length = 200;
       var line_length = (window.innerWidth) * 0.7;
-      var default_color = "red";
       var default_radius = 5;
+
+      /* Helper functions */
+      function getTime(raw_time){
+        if( raw_time == null){ return;}
+
+        if(raw_time.includes("(")){
+          var time_of_goal = parseInt(raw_time.split("(")[0]);
+        }
+        var to_return =(time_of_goal / 90) * (line_length-start_length);
+        return to_return+start_length;
+      }
+
+      function getScorer(raw_time){
+        if( raw_time == null){ return;}
+
+        if(raw_time.includes("(")){
+          var scorer = raw_time.split("(")[1].slice(0, -1);
+        }
+        return scorer;
+      }
+
       d3.select("body").append("svg")
         .selectAll("g")
         .attr("class", "main_svg")
@@ -58,39 +104,41 @@
         .enter()
         .append("circle")
         .attr("cx", function(d){
-          console.log(d);
+          return getTime(d);
+         })
+         .attr("cy", function(d, a, i){
+           return 30 * i;
+         })
+         .attr("r", default_radius)
+         .style("fill", function(d){
+           var scorer = getScorer(d);
+           if (scorer == "W"){
+             return "red";
+           }else if (scorer == "L") {
+             return "black";
+           } else{
+             return "gray";
+           }
+         })
+         .on("mouseover", function(){
+           d3.select(this).attr("r", 20);
+           //TODO This code isnt working
+           d3.select(this)
+            .append("text")
+            .attr("dx", function(d){ return getTime(d); })
+            .attr("dy",function(d, a, i){ return 30 * i; })
+            .text(function(d){
+              scorer = getScorer(d);
+              return scorer;
+            });
+         })
+         .on("mouseout", function(){
+            d3.select(this).attr("r", default_radius);
+         })
+         ;
 
-          if( d == null){
-            return;
-          }
 
-          var time_of_goal_raw = d;
-          if(time_of_goal_raw.includes("(")){
-            var time_of_goal = parseInt(time_of_goal_raw.split("(")[0]);
-          }
-
-          var to_return =(time_of_goal / 90) * (line_length-start_length);
-
-          return to_return+start_length;
-
-       })
-       .attr("cy", function(d, a, i){
-         return 30 * i;
-       })
-       .attr("r", default_radius)
-       .style("fill", function(d){
-         return default_color;
-       })
-       .on("mouseover", function(){
-         d3.select(this).attr("r", 20).style("fill", "black");
-       })
-       .on("mouseout", function(){
-          d3.select(this).attr("r", default_radius).style("fill", default_color);
-       })
-       ;
-
-
-      /* Line for each game */
+      /* Base Line for each game */
       d3.select("body")
         .select("svg")
         .selectAll("line")
@@ -106,6 +154,29 @@
         .attr("y2", function(d, i){
           return 30 * i;
         })
+        .style("stroke", "black")
+        ;
+
+      /* OverTime Line*/
+      d3.select("body")
+        .select("svg")
+        .selectAll("line")
+        .attr("class", "main_svg")
+        .data(data)
+        .enter()
+        .append("line")
+        .attr("x1", line_length)
+        .attr("x2", function(d){
+          console.log(d);
+          return line_length+20;
+        })
+        .attr("y1", function(d, i){
+          return 30 * i;
+        })
+        .attr("y2", function(d, i){
+          return 30 * i;
+        })
+        .style("stroke", "green")
         ;
 
       /* Game Label for the lines */
@@ -135,6 +206,7 @@
         //   return d.score;
         // })
         ;
+
 
 
     });
